# hal_nuvoton

./: CMakeLists.txt
m031x/: CMakeLists.txt
m2351/: CMakeLists.txt
m2351/StdDriver/: CMakeLists.txt
m2351/StdDriver/src/: hsusbd.c
m2l31x/: CMakeLists.txt
m2l31x/StdDriver/: CMakeLists.txt
m2l31x/StdDriver/inc/: acmp.h  canfd.h  clk.h  crc.h  crypto.h  dac.h  eadc.h  ebi.h  ecap.h  epwm.h  gpio.h  i2c.h  lpadc.h  lpgpio.h  lpi2c.h  lppdma.h  lpspi.h  lptmr.h  lptmr_pwm.h  lpuart.h  opa.h  otg.h  pdma.h  pwm.h  qspi.h  rmc.h  rng.h  rtc.h  spi.h  sys.h  timer.h  timer_pwm.h  tk.h  trng.h  ttmr.h  uart.h  usbd.h  usci_i2c.h  usci_spi.h  usci_uart.h  (+3 more)
m2l31x/StdDriver/src/: acmp.c  canfd.c  clk.c  crc.c  crypto.c  dac.c  eadc.c  ebi.c  ecap.c  epwm.c  eqei.c  gpio.c  i2c.c  lpadc.c  lpgpio.c  lpi2c.c  lppdma.c  lpspi.c  lptmr.c  lptmr_pwm.c  lpuart.c  pdma.c  pwm.c  qspi.c  retarget.c  rmc.c  rng.c  rtc.c  spi.c  sys.c  timer.c  timer_pwm.c  tk.c  trng.c  ttmr.c  uart.c  usbd.c  usci_i2c.c  usci_spi.c  usci_uart.c  (+3 more)
m333x/: CMakeLists.txt
m333x/StdDriver/: CMakeLists.txt
m333x/StdDriver/inc/: acmp.h  bpwm.h  cache.h  canfd.h  clk.h  crc.h  eadc.h  ebi.h  ecap.h  ellsi.h  epwm.h  eqei.h  fmc.h  gpio.h  hsotg.h  hsusbd.h  i2c.h  i2s.h  i3c.h  llsi.h  partition_m3331.h  pdma.h  qspi.h  rtc.h  scu.h  sdh.h  spi.h  sys.h  timer.h  timer_pwm.h  uart.h  usci_i2c.h  usci_spi.h  usci_uart.h  wdt.h  wwdt.h
m333x/StdDriver/src/: acmp.c  bpwm.c  canfd.c  clk.c  crc.c  eadc.c  ebi.c  ecap.c  ellsi.c  epwm.c  eqei.c  fmc.c  gpio.c  hsusbd.c  i2c.c  i2s.c  i3c.c  llsi.c  pdma.c  qspi.c  retarget.c  rtc.c  sdh.c  spi.c  sys.c  timer.c  timer_pwm.c  uart.c  usci_i2c.c  usci_spi.c  usci_uart.c  wdt.c  wwdt.c
m335x/: CMakeLists.txt
m335x/StdDriver/: CMakeLists.txt
m335x/StdDriver/inc/: acmp.h  bpwm.h  cache.h  canfd.h  clk.h  crc.h  crypto.h  dac.h  dfmc.h  eadc.h  ebi.h  ecap.h  ellsi.h  epwm.h  eqei.h  fmc.h  gpio.h  i2c.h  i3c.h  llsi.h  mpu_config_M3351_template.h  partition_M3351_template.h  pdma.h  pwm.h  qspi.h  rng.h  rtc.h  scu.h  spi.h  sys.h  timer.h  timer_pwm.h  trng.h  uart.h  usbd.h  usci_i2c.h  usci_spi.h  usci_uart.h  wdt.h  wwdt.h
m335x/StdDriver/src/: acmp.c  bpwm.c  canfd.c  clk.c  crc.c  crypto.c  dac.c  dfmc.c  eadc.c  ebi.c  ecap.c  ellsi.c  eqei.c  fmc.c  gpio.c  i2c.c  i3c.c  llsi.c  pdma.c  pwm.c  qspi.c  retarget.c  rng.c  rtc.c  spi.c  sys.c  timer.c  timer_pwm.c  trng.c  uart.c  usbd.c  usci_i2c.c  usci_spi.c  usci_uart.c  wdt.c  wwdt.c
m46x/: CMakeLists.txt
m46x/StdDriver/: CMakeLists.txt
m46x/StdDriver/drv_emac/: m460_eth.h  synopGMAC_Dev.c  synopGMAC_Dev.h  synopGMAC_network_interface.c  synopGMAC_plat.h
m46x/StdDriver/src/: clk.c  rtc.c
m48x/: CMakeLists.txt
m48x/StdDriver/inc/: ccap.h  clk.h  sdh.h  spi.h  timer_pwm.h  usbd.h
m48x/StdDriver/src/: epwm.c  fmc.c  i2c.c  qspi.c  sdh.c  spi.c
m55m1x/: CMakeLists.txt
m55m1x/StdDriver/: CMakeLists.txt
m55m1x/StdDriver/drv_emac/: numaker_eth.h  synopGMAC_Dev.h  synopGMAC_network_interface.c  synopGMAC_network_interface.h
m55m1x/StdDriver/inc/: acmp.h  awf.h  bpwm.h  canfd.h  ccap.h  clk.h  crc.h  (+55 more)
(+331 files in other folders)
